Fix some style issues with the bottom nav on ie 10.

--- a/_sass/footer.scss
+++ b/_sass/footer.scss
@@ -27,8 +27,8 @@
     // facilitates the copyright
     padding-bottom: 30px;
     @include mobile {
-      display: flex;
-      justify-content: center;
+      // display: flex;
+      // justify-content: space-between;
       flex-wrap: wrap;
       padding-bottom: 6px;
     }
@@ -40,9 +40,13 @@
     font-size: 1.2em;
     font-weight: bold;
     @include mobile {
-      width: 50%;
+      width: 45%;
       min-width: 0;
       padding: 15px 0;
+      vertical-align: top;
+      &:nth-child(even) {
+        text-align: right;
+      }
     }
   }
   .social {
@@ -56,17 +60,22 @@
       flex-direction: row;
       padding: 10px 0 0 0;
     }
+    > div {
+      width: 22px;
+      height: 22px;
+      margin-bottom: 30px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+      @include mobile {
+        margin-bottom: 0;
+      }
+    }
   }
+
   .social-icon {
-    width: 22px;
-    height: 22px;
-    margin-bottom: 30px;
-    &:last-child {
-      margin-bottom: 0;
-    }
-    @include mobile {
-      margin-bottom: 0;
-    }
+    width: 100%;
+    height: 100%;
   }
   .copyright {
     position: absolute;
